fix(mobile): hamburger z-index

--- a/assets/_dev/src/scss/components/_header.scss
+++ b/assets/_dev/src/scss/components/_header.scss
@@ -174,6 +174,7 @@
   &__mobile {
     position   : fixed;
     width      : 100%;
+    z-index: 50;
     box-sizing : border-box;
     justify-content  : space-between;
     align-items      : center;
